League/team/player html skeletons and links between them

--- a/team/team.html
+++ b/team/team.html
@@ -49,28 +49,28 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12 col-md-12 main">
-          <h1 class="page-header">League {X}</h1>
+          <h1 class="page-header">Team {X}</h1>
 
           <div class="row trivia">
 
             <div class="col-xs-6 col-sm-3 placeholder text-center">
               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4><a href="../team/team.html">League trivia</h4>
+              <h4><a href = "../player/player.html">Team trivia</h4>
               <span class="text-muted">Something else</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder text-center">
               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>League trivia</h4>
+              <h4>Team trivia</h4>
               <span class="text-muted">Something else</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder text-center">
               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>League trivia</h4>
+              <h4>Team trivia</h4>
               <span class="text-muted">Something else</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder text-center">
               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>League trivia</h4>
+              <h4>Team trivia</h4>
               <span class="text-muted">Something else</span>
             </div>
           </div>
